--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div id="page1" class="page active">
                 <h2 class="page-title">HAPPY 2nd ANNIVERSARY MY LOVE❤❤</h2>
                 <div class="page-content">
-                     Heyyyyaaaa BHARGAVI ❤❤ <br><br> Finally!!!! Its been complete 2 years since we are together in an official relationship and I am really happy that we had the courage to come this far.
+                     Heyyyyaaaa ❤❤ <br><br> Finally!!!! Its been complete 2 years since we are together in an official relationship and I am really happy that we had the courage to come this far.
 
                     <br><br>
                     So let us now dive into a short story of ours and some of the special moments we have had together.
@@ -202,7 +202,7 @@
                     Don't get confuse from the title as it reflects our current situation. Yeahh I know it is getting difficult to meet in recent days but i think we should not let ourselves down because of this dryness and should keep cheering each other with endless LOVE. 
                     <br><br>
                     Thank you so much for coming and also staying into my life as you make my life more bright.<br><br>
-                    I LOVE YOU SO MUCH BHARGAVI❤❤
+                    I LOVE YOU SO MUCH❤❤
                 </div>
             </div>
 
